RESOLVED FIXED276701
[Flex] Fix imported/w3c/web-platform-tests/css/css-flexbox/flexbox-baseline-multi-line-horiz-002.html
https://bugs.webkit.org/show_bug.cgi?id=276701
Summary [Flex] Fix imported/w3c/web-platform-tests/css/css-flexbox/flexbox-baseline-m...
alan
Reported 2024-07-16 20:18:46 PDT
ssia
Attachments
Patch (8.57 KB, patch)
2024-07-16 20:42 PDT, alan
no flags
Patch (8.57 KB, patch)
2024-07-17 06:24 PDT, alan
ews-feeder: commit-queue-
[fast-cq]Patch (23.56 KB, patch)
2024-07-17 10:58 PDT, alan
no flags
alan
Comment 1 2024-07-16 20:42:51 PDT
alan
Comment 2 2024-07-17 06:24:07 PDT
alan
Comment 3 2024-07-17 10:58:46 PDT
Created attachment 471905 [details] [fast-cq]Patch
EWS
Comment 4 2024-07-17 12:30:44 PDT
Committed 281061@main (b7c1f1bbf585): <https://commits.webkit.org/281061@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 471905 [details].
Radar WebKit Bug Importer
Comment 5 2024-07-17 12:31:14 PDT
Note You need to log in before you can comment on or make changes to this bug.