[Flex] Fix imported/w3c/web-platform-tests/css/css-flexbox/flexbox-baseline-multi-line-horiz-002.html https://bugs.webkit.org/show_bug.cgi?id=276701

Reviewed by Antti Koivisto.

Add support for first/last baseline when flex-wrap is reversed. It simply means that first/last baseline
should follow visual order (flex-wrap: reverse swaps the order meaning first line is last, last is first etc).

(FIXME: Add support for row/column reverse)

* LayoutTests/TestExpectations: while now we actually match other engines, expectation still produces incorrect result making this test fail.
* Source/WebCore/rendering/RenderFlexibleBox.cpp:
(WebCore::RenderFlexibleBox::firstLineBaseline const):
(WebCore::RenderFlexibleBox::lastLineBaseline const):
(WebCore::RenderFlexibleBox::layoutFlexItems):
(WebCore::RenderFlexibleBox::flexItemOnFirstFlexLineForBaseline const):
(WebCore::RenderFlexibleBox::flexItemOnLastFlexLineForBaseline const):
(WebCore::RenderFlexibleBox::baselineFlexItem const): Deleted.
* Source/WebCore/rendering/RenderFlexibleBox.h:

Canonical link: https://commits.webkit.org/281061@main